omod/src/main/webapp/resources/styles/ncd.css
/* NCD Forms styling */

.wrapper {
  overflow: hidden;
  height: 100%;
  clear: both;
  margin-top: 7px;
  display: flex;
}

.left-column {
  background: #55D6BE;
  width: 30%;
  overflow: hidden;
  float: left;
}

.left-column h3{
  margin-top:0
}

.left-column .left-navigation {
  margin: 30px
}

.left-column .left-navigation ol {
  margin:20px 0 20px 20px;
  width: 103%;
  color: #fff;
}

.left-column .left-navigation ol li {
  padding-left: 5px;
  color: #fff;
}

.left-column .left-navigation ol li:hover {
  background: #4EC3AD;
}

.left-column .left-navigation ol li a {
  color: #fff;
  font-size: 18px;
  line-height: 18px;
  padding: 7px 0px;
  display:inline-block;
  width: 100%;
}

.left-column .left-navigation ol li a:hover{
  text-decoration: none;
}

.left-column .left-navigation .nav-button.save,
.left-column .left-navigation .nav-button.cancel {
  width: 48%;
  padding: 7px 24px;
  font-size: 90%;
}
.left-column .left-navigation .nav-button.save {
  margin-right: 3%;
  float: left;
}
.left-column .left-navigation .nav-button.final i {
  margin-right: 10px;
  font-size: 99%
}

#htmlform .right-form-display {
  color: #6D7378;
}

.right-form-display {
  width: 70%;
  float: right;
}
.right-form-display .sections-container {
  margin:30px;
}

.right-form-display .sections-container .section {
  margin-bottom:50px
}

.right-form-display .sections-container .section table{
  box-shadow: none;
}

.right-form-display .sections-container .section table td{
  padding:12px 10px;
}

.right-form-display .sections-container .section .add-box {
  background: #F1F9FE;
  border-radius: 20px;
  border:none;
  padding: 30px;

}
.right-form-display .sections-container .section .add-box h4 {
  margin-top:0;
  border-bottom: 1px solid #A8BDC5;
}

.right-form-display .sections-container h3 {
  padding-bottom: 10px;
  border-bottom: 1px solid #eeeeee;
  margin-bottom: 20px;
  margin-top: 0;
}

.right-form-display .sections-container h3 a {
  text-decoration: none;
  color: #373F46;
}

.nav-button {
  width: 100%;
  margin-bottom: 10px;
  text-transform: uppercase;
}

.section {
  border: 1px solid $headerColor;
  padding: 2px;
  text-align: left;
  margin-bottom: 1em;
}

.sectionHeader {
  background-color: $headerColor;
  color: $fontOnHeaderColor;
  display: block;
  padding: 2px;
  font-weight: bold;
}

table.baseline-aligned td {
  vertical-align: baseline;
}
.btn:active {
  background-color:yellow;
}

.btn.active {
  color: #white;
  background-color:darkgrey;
}

table th, table td {
  border: 0;
  padding:5px;
}

td.left-th {
  background: #618696;
}
td.left-th span{
  margin-left: 5px;
  display: block;
  color: #fff;
  font-size: 16px;
  font-weight: 700;
}
#diagnosis-search-container label {
  margin-left: 0;
  padding-left: 0;
  margin-bottom: 5px;
}
input#diagnosis-search {
  width: 95%;
  margin-bottom: 20px;
}
.add-box#encounter-diagnoses-target h3{
  font-size: 23px;
  color: #618696;
  font-family: "OpenSansSemiBold", Arial, sans-serif;
}

#display-encounter-diagnoses-container li .diagnosis {
  background: #fff;
  border: 1px solid #ddd;
  box-shadow: rgba(0,0,0,0.1) 0 4px 8px;
  color: #333;
}

#display-encounter-diagnoses-container li .diagnosis.primary {
  border-left: 4px #55D6BE solid;
}

#display-encounter-diagnoses-container li .diagnosis .actions input {
  float: inherit;
  margin:3px 5px 0px 10px;
}
#display-encounter-diagnoses-container .matched-name {
  float: left;
  margin-right: 10px;
}
#display-encounter-diagnoses-container .code {float: none;}
.obs-field.large input {
  width: 90%;
}
.obs-field.medication select, .obs-field.frequency select, .obs-field.duration select{
  width: 100%;
}
#display-encounter-diagnoses-container li .diagnosis .actions label {
    vertical-align: top;
    display: inline;
    margin-right: 10px;
    margin-left: 0;
  }

#display-encounter-diagnoses-container li .diagnosis .actions {
    margin-top: 0;
    height: 3rem;
    background: none;
    border-top: 0px solid #373F46;
    box-shadow: none;
}

.right-form-display .sections-container .section .add-box table tr:nth-child(odd),
.right-form-display .sections-container .section .add-box table tr:nth-child(even) {
  background: none;
}

.right-form-display .sections-container .section .add-box table tr {
  border:none;
}

.right-form-display .sections-container .section .add-box table tr td {
  padding-left: 0;
  vertical-align: top;
}

input.submitButton {
  float: right;
  margin: 24px;
}


.input-group form input[type="checkbox"], 
.input-group .form input[type="checkbox"] {
  margin:4px;
}


/* Allergies */

span[id*="allergy-type-"] label {
  float: left;
  padding: 24px;
  width: 30%;
  box-sizing: border-box;
  text-align: center;
  border: 1px solid #eee;
  border-radius: 8px;
  box-shadow: rgba(0,0,0,0.3) 0 1px 2px;
  margin: -8px 25px 16px -24px !important;
}
span[id*="allergy-type-"] input[type="radio"] {
  padding:24px;
}

span[id*="allergy-type-"] input[type="radio"]:checked + label {
  background:#55D6BE;
  color:#fff;
  border:none;
  box-shadow: inset rgba(0,0,0,0.3) 0 1px 2px;
}

.allergy-tab {
  padding: 24px;
  margin-top:64px;
  border: 2px solid #55D6BE;
  border-radius: 8px;
}

.allergy-tab > input[type=radio] + label {
  float:none;
  margin:4px;
}

.input-group {
  padding: 4px;
}

.list-of-checkboxes {
  display: flex;
}

.list-of-checkboxes .column {
  width:249px;
}

